feat: add auth layout, login & sign-up  with react-hook-form

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,6 @@
 {
-  "singleQuote": false,
-  "importOrder": ["^@(.*)/(.*)$", "^[./]"],
+  "singleQuote": true,
+  "importOrder": ["^@(reduxjs|mui|emotion)/(.*)$", "^@(.*)/(.*)$", "^[./]"],
   "importOrderSeparation": true,
   "importOrderSortSpecifiers": true,
   "plugins": ["@trivago/prettier-plugin-sort-imports"]
