--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "5.14.16",
+    "@mui/lab": "5.0.0-alpha.153",
     "@mui/material": "5.14.17",
     "@reduxjs/toolkit": "^2.3.0",
     "firebase": "^11.0.1",
+    "mui-modal-provider": "^2.4.4",
     "notistack": "^3.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
