--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@mui/icons-material": "5.14.16",
     "@mui/lab": "5.0.0-alpha.153",
     "@mui/material": "5.14.17",
+    "@mui/x-date-pickers": "^7.23.0",
     "@reduxjs/toolkit": "^2.3.0",
+    "dayjs": "^1.11.13",
     "firebase": "^11.0.1",
     "mui-modal-provider": "^2.4.4",
     "notistack": "^3.0.1",
