--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "5.14.16",
     "@mui/lab": "5.0.0-alpha.153",
-    "@mui/material": "5.14.17",
+    "@mui/material": "^6.3.0",
     "@mui/x-date-pickers": "^7.23.0",
     "@reduxjs/toolkit": "^2.3.0",
     "dayjs": "^1.11.13",
