--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@reduxjs/toolkit": "^2.3.0",
     "dayjs": "^1.11.13",
     "firebase": "^11.0.1",
+    "lodash.debounce": "^4.0.8",
     "mui-modal-provider": "^2.4.4",
     "notistack": "^3.0.1",
     "react": "^18.3.1",
@@ -32,6 +33,7 @@
   "devDependencies": {
     "@eslint/js": "^9.13.0",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+    "@types/lodash.debounce": "^4.0.9",
     "@types/node": "^22.9.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
