--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "@reduxjs/toolkit": "^2.3.0",
     "dayjs": "^1.11.13",
     "firebase": "^11.0.1",
-    "lodash.debounce": "^4.0.8",
     "mui-modal-provider": "^2.4.4",
     "notistack": "^3.0.1",
     "react": "^18.3.1",
@@ -34,6 +33,7 @@
     "@eslint/js": "^9.13.0",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/lodash.debounce": "^4.0.9",
+    "@types/lodash.isequal": "^4.5.8",
     "@types/node": "^22.9.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
@@ -46,6 +46,8 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.11.0",
+    "lodash.debounce": "^4.0.8",
+    "lodash.isequal": "^4.5.0",
     "prettier": "^3.3.3",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.11.0",
